--- a/README
+++ b/README
@@ -1,2 +1,7 @@
 # doctor-robins-home-delivery-service
 =====================================
+
+8 F 9 3    输 transport, carry, haul
+5 1 6 5    入 enter, come in(to), join
+4 E F 7    价 price, value
+6 8 3 C    格 pattern, standard, form; style
