--- a/README
+++ b/README
@@ -5,3 +5,8 @@
 5 1 6 5    入 enter, come in(to), join
 4 E F 7    价 price, value
 6 8 3 C    格 pattern, standard, form; style
+
+7 9 F B    移 change place, shift; move about
+5 2 D 5    動 move, happen; movement, action
+5 5 A E    單 single, individual, only; lone
+5 1 4 3    元 first; dollar; origin; head
