--- a/README
+++ b/README
@@ -10,3 +10,8 @@
 5 2 D 5    動 move, happen; movement, action
 5 5 A E    單 single, individual, only; lone
 5 1 4 3    元 first; dollar; origin; head
+
+8 E C D    軍 army, military; soldiers, troops
+4 E 8 B    事 affair, matter, business; to serve; accident, incident
+5 5 A E    單 single, individual, only; lone
+4 F 4 D    位 throne; position, post; rank, status; seat
