--- a/README
+++ b/README
@@ -11,6 +11,11 @@
 5 5 A E    單 single, individual, only; lone
 5 1 4 3    元 first; dollar; origin; head
 
+6 0 5 0    恐 fear; fearful, apprehensive
+6 0 1 6    怖 terror, fear; frighten; terrified
+4 E 3 B    主 master, chief owner; host; lord
+7 F A 9    義 right conduct, righteousness
+
 8 E C D    軍 army, military; soldiers, troops
 4 E 8 B    事 affair, matter, business; to serve; accident, incident
 5 5 A E    單 single, individual, only; lone
