--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# doctor-robins-home-delivery-service
-=====================================
+# dudoc
+=======
 
 8 F 9 3    输 transport, carry, haul
 5 1 6 5    入 enter, come in(to), join
