--- a/README
+++ b/README
@@ -1,6 +1,21 @@
 # dudok
 =======
 
+0
+
+-------    x(4)
+
+9 6 F 6    零 zero
+
+-------    hex
+
+8 1 6 6    腦 brain
+6 D 1 7    洗 wash, rinse; clean, purify
+8 8 6 3    衣 clothing, cover, skin
+6 A 5 F    機 machine; moment, chance
+
+-------    unicode
+
 8 F 9 3    输 transport, carry, haul
 5 1 6 5    入 enter, come in(to), join
 4 E F 7    价 price, value
